--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@ body{
 
 .fondo-calculadora{
     background-color: #62ac89;
-    padding-top: 5em !important;
+    padding-top: 3.5em !important;
 }
 
 h1{
@@ -17,43 +17,32 @@ h1{
     font-family: "Nerko One"
 }
 
-.btn-primary{
-    background-color: #d3ffda;
-}
-
-.btn-secondary{
-    background-color: #83fa78;
-}
-
-.btn-success{
-    background-color: #00ff11;
-}
-
-.btn-danger{
-    background-color: #ffaeb2;
-}
 .btn{
     color: black;
 }
 
+.btn-primary,
 .btn-primary:hover{
     background-color: #d3ffda;
     color: initial;
     border-color: initial;
 }
 
+.btn-secondary,
 .btn-secondary:hover{
     background-color: #83fa78;
     color: initial;
     border-color: initial;
 }
 
+.btn-success,
 .btn-success:hover{
     background-color: #00ff11;
     color: initial;
     border-color: initial;
 }
 
+.btn-danger,
 .btn-danger:hover{
     background-color: #ffaeb2;
     color: initial;
@@ -66,6 +55,6 @@ h1{
 }
 
 .container{
-    max-width: 40rem;
+    max-width: 30rem;
 }
 
